data/derived/comb/progs/unify/prog8387.ml.out
Characters 8-9:
  let _ = 2 ** 3;;
          ^
Error: This expression has type int but an expression was expected of type
         float
